feat: Trabalhando na geração do access token
