# 09-api/docs/swagger.yaml
@@ -1,5 +1,17 @@
 basePath: /
 definitions:
+  dto.JWTUserInput:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    type: object
+  dto.TokenModel:
+    properties:
+      access_token:
+        type: string
+    type: object
   dto.UserInput:
     properties:
       email:
@@ -50,6 +62,40 @@ paths:
           schema:
             $ref: '#/definitions/handlers.Error'
       summary: Create User
+      tags:
+      - users
+  /users/generate_token:
+    post:
+      consumes:
+      - application/json
+      description: Get a user JWT
+      parameters:
+      - description: user credentials
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.JWTUserInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.TokenModel'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.Error'
+      summary: Get a user JWT
       tags:
       - users
 securityDefinitions:
